Fix navigation mobile

--- a/style/style.less
+++ b/style/style.less
@@ -344,7 +344,7 @@ h4, h5 {
             width: 50vw;
             height: 100vh;
             right: -100vw;
-            top: 58px;
+            top: 67px;
             z-index: 998;
             background: @color-light;
             transition: .3s all linear;
